# meson-rs

./: Cargo.toml  README.md
src/: config.rs  lib.rs
